--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy — Safelyo</title>
+    <title>Privacy Policy — Nummira</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <style>
         /* Reusing core styles from index.html */
         :root {
-            --c-safelyo-blue: #91A7FF;
+            --c-nummira-blue: #91A7FF;
             --c-card-bg: #1E252E;
             --c-card-border: #2D3640;
             --c-text-main: #FFFFFF;
@@ -51,7 +51,7 @@
             font-size: 1.5rem;
             margin-top: 40px;
             margin-bottom: 16px;
-            color: var(--c-safelyo-blue);
+            color: var(--c-nummira-blue);
         }
 
         p {
@@ -98,9 +98,9 @@
 
     <div class="container">
         <h1>Privacy Policy</h1>
-        <p>Last updated: January 14, 2026</p>
+        <p>Last updated: January 17, 2026</p>
 
-        <p>Your privacy is our priority. Safelyo is designed as an <strong>offline-first</strong> application, meaning
+        <p>Your privacy is our priority. Nummira is designed as an <strong>offline-first</strong> application, meaning
             your financial data is stored locally on your device by default.</p>
 
         <h2>1. Data Storage</h2>
@@ -108,7 +108,7 @@
             your smartphone. We do not transmit this data to our servers for storage.</p>
 
         <h2>2. Artificial Intelligence (AI) Usage</h2>
-        <p>Safelyo uses third-party AI providers to offer features like asset valuation, risk analysis, and forecasting.
+        <p>Nummira uses third-party AI providers to offer features like asset valuation, risk analysis, and forecasting.
             We partner with the following providers:</p>
         <ul>
             <li><strong>Gemini</strong> (Google)</li>
@@ -132,7 +132,7 @@
             information. You should verify all valuations and financial advice independently.</p>
 
         <h2>5. Contact Us</h2>
-        <p>If you have questions about this policy, please contact privacy@safelyo.app.</p>
+        <p>If you have questions about this policy, please contact privacy@nummira.com.</p>
 
         <br><br><br>
     </div>
