--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service — Safelyo</title>
+    <title>Terms of Service — Nummira</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <style>
         /* Reusing core styles from index.html */
         :root {
-            --c-safelyo-blue: #91A7FF;
+            --c-nummira-blue: #91A7FF;
             --c-card-bg: #1E252E;
             --c-card-border: #2D3640;
             --c-text-main: #FFFFFF;
@@ -51,7 +51,7 @@
             font-size: 1.5rem;
             margin-top: 40px;
             margin-bottom: 16px;
-            color: var(--c-safelyo-blue);
+            color: var(--c-nummira-blue);
         }
 
         p {
@@ -98,14 +98,14 @@
 
     <div class="container">
         <h1>Terms of Service</h1>
-        <p>Last updated: January 14, 2026</p>
+        <p>Last updated: January 17, 2026</p>
 
         <h2>1. Acceptance of Terms</h2>
-        <p>By downloading or using Safelyo ("the App"), you agree to be bound by these Terms. If you do not agree, do
+        <p>By downloading or using Nummira ("the App"), you agree to be bound by these Terms. If you do not agree, do
             not use the App.</p>
 
         <h2>2. No Financial Advice</h2>
-        <p>Safelyo is a tool for tracking and analyzing your wealth. <strong>The App does not provide professional
+        <p>Nummira is a tool for tracking and analyzing your wealth. <strong>The App does not provide professional
                 financial, investment, or legal advice.</strong> Analysis and forecasts provided by the App are for
             informational purposes only. You should consult with a qualified professional before making any financial
             decisions.</p>
@@ -121,7 +121,7 @@
         </ul>
 
         <h2>4. Limitation of Liability</h2>
-        <p>To the maximum extent permitted by law, Safelyo Inc. and its developers shall not be liable for any indirect,
+        <p>To the maximum extent permitted by law, Nummira Inc. and its developers shall not be liable for any indirect,
             incidental, special, consequential, or punitive damages, including without limitation, loss of profits,
             data, use, goodwill, or other intangible losses, resulting from:</p>
         <ul>
